--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "binghk/jieba",
+    "name": "Bingohk/jieba",
     "type": "library",
     "description": "結巴中文分詞（PHP 版本）：做最好的 PHP 中文分詞、中文斷詞組件",
     "keywords": ["Jieba", "PHP"],
     "license": "MIT",
-    "version": "0.1",
+    "version": "v0.0.2",
     "authors": [
         {
             "name": "coso",
@@ -22,7 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "bingohk\\Jieba\\": "src/class/"
+            "Bingohk\\Jieba\\": "src/class/"
         },
         "files": [
             "src/vendor/multi-array/MultiArray.php",
