--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "結巴中文分詞（PHP 版本）：做最好的 PHP 中文分詞、中文斷詞組件",
     "keywords": ["Jieba", "PHP"],
     "license": "MIT",
-    "version": "v0.0.2",
+    "version": "0.0.3",
     "authors": [
         {
             "name": "coso",
