--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "php": ">= 8.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.0",
-        "squizlabs/php_codesniffer": "4.0.x-dev",
+        "phpunit/phpunit": ">=9.0",
+        "squizlabs/php_codesniffer": ">=4.0.x-dev",
         "php-coveralls/php-coveralls": "dev-master"
     },
     "autoload": {
